--- a/ThirdPartyComponents/zlib/Makefile
+++ b/ThirdPartyComponents/zlib/Makefile
@@ -156,7 +156,7 @@ else
 endif
 ifeq (Unix,$(ProjectPlatformSubdir))
 	@#some hacks to make more similar to what I had before - not sure why this fixes things....
-	@rm -f $(PER_CONFIGURATION_BUILDS_DIR)/lib/{libz.so*,libz.*.dynlib} $(PER_CONFIGURATION_BUILDS_DIR)/lib/pkgconfig/zlib.pc
+	@rm -f $(PER_CONFIGURATION_BUILDS_DIR)/lib/libz.so* $(PER_CONFIGURATION_BUILDS_DIR)/lib/libz.*.dynlib $(PER_CONFIGURATION_BUILDS_DIR)/lib/pkgconfig/zlib.pc
 endif
 
 $(ZIPPED_SOURCES_FILE):
