--- a/ThirdPartyComponents/zlib/Makefile
+++ b/ThirdPartyComponents/zlib/Makefile
@@ -1,45 +1,44 @@
 #
 #	TODO:
-#		@todo	NOTE - try for $(word 1,$(PRODUCED_OUTPUT_ARTIFACTS_)) and $(wordlist 2, 9999, $(PRODUCED_OUTPUT_ARTIFACTS_)):	$(word 1,$(PRODUCED_OUTPUT_ARTIFACTS_))
+#		@todo	NOTE - try for $(word 1,${PRODUCED_OUTPUT_ARTIFACTS_}) and $(wordlist 2, 9999, ${PRODUCED_OUTPUT_ARTIFACTS_}):	$(word 1,${PRODUCED_OUTPUT_ARTIFACTS_})
 #				(repeated in most ThirdPartyComponents makefiles)
 #				doesn't work if the first produced output artifact is fine, but the others got deleted. No BIGGIE, as you can just make clobber in that
 #				exceedingly rare case; but certainly a defect of this approach.
 #
 StroikaRoot=$(abspath ../..)/
 
-ifneq ($(CONFIGURATION),)
-	-include ${StroikaRoot}IntermediateFiles/$(CONFIGURATION)/Configuration.mk
+ifneq (${CONFIGURATION},)
+	-include ${StroikaRoot}IntermediateFiles/${CONFIGURATION}/Configuration.mk
 endif
 
 include ${StroikaRoot}ScriptsLib/Makefile-Common.mk
 include ${StroikaRoot}/ScriptsLib/SharedMakeVariables-Default.mk
-ifneq ($(CONFIGURATION),)
+ifneq (${CONFIGURATION},)
 include ${StroikaRoot}ScriptsLib/Makefile-CMake-Common.mk		# for things like CMAKE_ARGS
 endif
 
 #
 # CHECK FOR UPDATED VERSIONS http://zlib.net/
 #
-VERSION=1.2.13
-#VERSION=1.2.12
+ZLIB_VERSION_=1.2.13
+#ZLIB_VERSION_=1.2.12
 
-BASENAME=zlib-$(VERSION)
-ZIPPED_SOURCES_FILE=../Origs-Cache/$(BASENAME).tar.gz
+ZIPPED_SOURCES_FILE_=../Origs-Cache/zlib-${ZLIB_VERSION_}.tar.gz
 
-FETCHURLS=
-FETCHURLS+=https://github.com/madler/zlib/archive/v$(VERSION).tar.gz
-FETCHURLS+=http://zlib.net/zlib-$(VERSION).tar.gz
-FETCHURLS+=http://prdownloads.sourceforge.net/libpng/zlib-$(VERSION).tar.gz?download
-#FETCHURLS+=http://sourceforge.net/projects/libpng/files/zlib/$(VERSION)/zlib-$(VERSION).tar.gz/download
-
+FETCHURLS_=
+FETCHURLS_+=https://github.com/madler/zlib/archive/v${ZLIB_VERSION_}.tar.gz
+FETCHURLS_+=http://zlib.net/zlib-${ZLIB_VERSION_}.tar.gz
+FETCHURLS_+=http://prdownloads.sourceforge.net/libpng/zlib-${ZLIB_VERSION_}.tar.gz?download
+#FETCHURLS_+=http://sourceforge.net/projects/libpng/files/zlib/${ZLIB_VERSION_}/zlib-${ZLIB_VERSION_}.tar.gz/download
 
 
-PER_CONFIGURATION_BUILDS_DIR:=$(shell realpath --canonicalize-missing ../../Builds/$(CONFIGURATION)/ThirdPartyComponents/)/
+
+PER_CONFIGURATION_BUILDS_DIR_:=$(shell realpath --canonicalize-missing ../../Builds/${CONFIGURATION}/ThirdPartyComponents/)/
 
 #lose trailing / on PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_ because on macos make THATDIR doesn't work with trailing slash (old WEIRD_MACOS_MAKEFILE_DIR_BUG -  MacOS XCode 10 - GNU Make 3.81)
-PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_:=$(shell realpath --canonicalize-missing ../../IntermediateFiles/$(CONFIGURATION)/ThirdPartyComponents/zlib)
+PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_:=$(shell realpath --canonicalize-missing ../../IntermediateFiles/${CONFIGURATION}/ThirdPartyComponents/zlib)
 
-OUTPUT_WORKDIR_PRETTYNAME="$(shell ${StroikaRoot}ScriptsLib/SubstituteBackVariables "$(PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_)/")"
+OUTPUT_WORKDIR_PRETTYNAME_="$(shell ${StroikaRoot}ScriptsLib/SubstituteBackVariables "$(PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_)/")"
 
 COMPILER_NATIVE_FILENAME_FMT_SRC_ROOT_:=$(call FUNCTION_CONVERT_FILEPATH_TO_COMPILER_NATIVE,${StroikaRoot}/ThirdPartyComponents/zlib/CURRENT)
 
@@ -47,27 +46,28 @@ COMPILER_NATIVE_FILENAME_FMT_SRC_ROOT_:=$(call FUNCTION_CONVERT_FILEPATH_TO_COMP
 
 ifeq (${ENABLE_ASSERTIONS},1)
 CMAKE_BUILD_TYPE_=Debug
-MAYBED=d
+MAYBED_=d
 else
 CMAKE_BUILD_TYPE_=Release
+MAYBED_=
 endif
 
 ifeq (VisualStudio,$(findstring VisualStudio,$(ProjectPlatformSubdir)))
-OUTPUT_LIB_=zlibstatic${MAYBED}${LIB_SUFFIX}
+OUTPUT_LIB_=zlibstatic${MAYBED_}${LIB_SUFFIX}
 else
 OUTPUT_LIB_=libz${LIB_SUFFIX}
 endif
 
 
 PRODUCED_OUTPUT_ARTIFACTS_=	\
-	$(PER_CONFIGURATION_BUILDS_DIR)lib/${OUTPUT_LIB_}		\
-	$(PER_CONFIGURATION_BUILDS_DIR)include/zlib.h			\
-	$(PER_CONFIGURATION_BUILDS_DIR)include/zconf.h
+	${PER_CONFIGURATION_BUILDS_DIR_}lib/${OUTPUT_LIB_}		\
+	${PER_CONFIGURATION_BUILDS_DIR_}include/zlib.h			\
+	${PER_CONFIGURATION_BUILDS_DIR_}include/zconf.h
 
 
 
 # For some reason, comes out as share by default for zlib
-CMAKE_ARGS+=	-D INSTALL_PKGCONFIG_DIR="$(call FUNCTION_CONVERT_FILES_TO_COMPILER_NATIVE ,${PER_CONFIGURATION_BUILDS_DIR}/lib/pkgconfig)"
+CMAKE_ARGS+=	-D INSTALL_PKGCONFIG_DIR="$(call FUNCTION_CONVERT_FILES_TO_COMPILER_NATIVE ,${PER_CONFIGURATION_BUILDS_DIR_}lib/pkgconfig)"
 
 ifeq (Unix,$(ProjectPlatformSubdir))
 # @todo document - not sure needed - maybe related to shared/.so file stuff
@@ -76,43 +76,43 @@ CMAKE_ARGS+=	-D CMAKE_SKIP_RPATH="YES"
 endif
 
 all:
-ifeq ($(CONFIGURATION),)
+ifeq (${CONFIGURATION},)
 	$(error This makefile requires a CONFIGURATION= parameter, or environment variable set)
 endif
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $(MAKE_INDENT_LEVEL) "Stroika/ThirdPartyComponents/zlib Build $(VERSION) {$(CONFIGURATION)}:"
-	@${StroikaRoot}ScriptsLib/CheckValidConfiguration $(CONFIGURATION)
-	@#make ZIPPED_SOURCES_FILE even though a dependency on CURRENT and PRODUCED_ARTIFACTS for parallel-make so completed before either starts (else one sees file partly downloaded and proceeeds)
-	@${MAKE} --no-print-directory --silent ${ZIPPED_SOURCES_FILE}
-	@${MAKE} --no-print-directory --silent $(PRODUCED_OUTPUT_ARTIFACTS_)
+	@${StroikaRoot}ScriptsLib/PrintProgressLine ${MAKE_INDENT_LEVEL} "Stroika/ThirdPartyComponents/zlib Build ${ZLIB_VERSION_} {${CONFIGURATION}}:"
+	@${StroikaRoot}ScriptsLib/CheckValidConfiguration ${CONFIGURATION}
+	@#make ZIPPED_SOURCES_FILE_ even though a dependency on CURRENT and PRODUCED_ARTIFACTS for parallel-make so completed before either starts (else one sees file partly downloaded and proceeeds)
+	@${MAKE} --no-print-directory --silent ${ZIPPED_SOURCES_FILE_}
+	@${MAKE} --no-print-directory --silent ${PRODUCED_OUTPUT_ARTIFACTS_}
 ifneq ($(QUICK_BUILD), 1)
 	@${MAKE} --no-print-directory --silent CURRENT
 endif
-	@${MAKE} --no-print-directory MAKE_INDENT_LEVEL=$$(($(MAKE_INDENT_LEVEL)+1)) check
+	@${MAKE} --no-print-directory MAKE_INDENT_LEVEL=$$((${MAKE_INDENT_LEVEL}+1)) check
 
 
 #ALL produced artifacts produced by the same thing. But if you try the same rule to make all, if parallel makes invoked on this, you get
 #multiple tries to run the same rule. So remap all to making the first.
-$(wordlist 2, 9999, $(PRODUCED_OUTPUT_ARTIFACTS_)):	$(word 1,$(PRODUCED_OUTPUT_ARTIFACTS_))
+$(wordlist 2, 9999, ${PRODUCED_OUTPUT_ARTIFACTS_}):	$(word 1,${PRODUCED_OUTPUT_ARTIFACTS_})
 
-$(word 1,$(PRODUCED_OUTPUT_ARTIFACTS_)):
-ifeq ($(CONFIGURATION),)
+$(word 1,${PRODUCED_OUTPUT_ARTIFACTS_}):
+ifeq (${CONFIGURATION},)
 	$(error This makefile requires a CONFIGURATION= parameter, or environment variable set)
 endif
 	@${MAKE} --silent CURRENT
 
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $$(($(MAKE_INDENT_LEVEL)+1)) "zlib $(VERSION) - Configure (see $(OUTPUT_WORKDIR_PRETTYNAME)CONFIGURE-OUT.txt) ..."
+	@${StroikaRoot}ScriptsLib/PrintProgressLine $$((${MAKE_INDENT_LEVEL}+1)) "zlib ${ZLIB_VERSION_} - Configure (see ${OUTPUT_WORKDIR_PRETTYNAME_}CONFIGURE-OUT.txt) ..."
 	@rm -rf "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}"; mkdir -p "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}"
 	@echo "${CMAKE}" ${CMAKE_ARGS} "${COMPILER_NATIVE_FILENAME_FMT_SRC_ROOT_}" >  "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}/CONFIGURE-OUT.txt" 2>&1
 	@echo "SEE ${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}/CMakeCache.txt" >>  "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}/CONFIGURE-OUT.txt" 2>&1
 	@cd "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}" && "${CMAKE}" ${CMAKE_ARGS} ${COMPILER_NATIVE_FILENAME_FMT_SRC_ROOT_} >> CONFIGURE-OUT.txt 2>&1
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $$(($(MAKE_INDENT_LEVEL)+1)) "zlib $(VERSION) - Build (see $(OUTPUT_WORKDIR_PRETTYNAME)BUILD-OUT.txt) ..."
+	@${StroikaRoot}ScriptsLib/PrintProgressLine $$((${MAKE_INDENT_LEVEL}+1)) "zlib ${ZLIB_VERSION_} - Build (see ${OUTPUT_WORKDIR_PRETTYNAME_}BUILD-OUT.txt) ..."
 	@#@todo dont understand why config=${CMAKE_BUILD_TYPE_} NEEDED for windows, and needs to not exist on unix
 ifeq (VisualStudio,$(findstring VisualStudio,$(ProjectPlatformSubdir)))
 	@cd "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}" && "${CMAKE}" --build . --target zlibstatic --target zlib --config=${CMAKE_BUILD_TYPE_} > BUILD-OUT.txt 2>&1
 else
 	@cd "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}" && "${CMAKE}" --build . --target zlibstatic --target zlib  > BUILD-OUT.txt 2>&1
 endif
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $$(($(MAKE_INDENT_LEVEL)+1)) "zlib $(VERSION) - Build (see $(OUTPUT_WORKDIR_PRETTYNAME)INSTALL-OUT.txt) ..."
+	@${StroikaRoot}ScriptsLib/PrintProgressLine $$((${MAKE_INDENT_LEVEL}+1)) "zlib ${ZLIB_VERSION_} - Build (see ${OUTPUT_WORKDIR_PRETTYNAME_}INSTALL-OUT.txt) ..."
 ifeq (VisualStudio,$(findstring VisualStudio,$(ProjectPlatformSubdir)))
 	@cd "${PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_}" && "${CMAKE}" --install . --config=${CMAKE_BUILD_TYPE_}  > INSTALL-OUT.txt 2>&1
 else
@@ -120,24 +120,23 @@ else
 endif
 ifeq (Unix,$(ProjectPlatformSubdir))
 	@#some hacks to make more similar to what I had before - not sure why this fixes things... --LGP 2023-05-11
-	@rm -f $(PER_CONFIGURATION_BUILDS_DIR)/lib/libz.so* $(PER_CONFIGURATION_BUILDS_DIR)/lib/libz*.dylib $(PER_CONFIGURATION_BUILDS_DIR)/lib/pkgconfig/zlib.pc
+	@rm -f ${PER_CONFIGURATION_BUILDS_DIR_}lib/libz.so* ${PER_CONFIGURATION_BUILDS_DIR_}lib/libz*.dylib ${PER_CONFIGURATION_BUILDS_DIR_}lib/pkgconfig/zlib.pc
 endif
 
 
-${ZIPPED_SOURCES_FILE}:
-	@MAKE_INDENT_LEVEL=$$(($(MAKE_INDENT_LEVEL)+1)) ${StroikaRoot}ScriptsLib/WebGet ${ZIPPED_SOURCES_FILE} $(FETCHURLS)
+${ZIPPED_SOURCES_FILE_}:
+	@MAKE_INDENT_LEVEL=$$((${MAKE_INDENT_LEVEL}+1)) ${StroikaRoot}ScriptsLib/WebGet ${ZIPPED_SOURCES_FILE_} ${FETCHURLS_}
 
 
-
-ORIGs CURRENT:	${ZIPPED_SOURCES_FILE}
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $$(($(MAKE_INDENT_LEVEL)+1)) `${StroikaRoot}ScriptsLib/SubstituteBackVariables "zlib ${VERSION} - Extracting ${ZIPPED_SOURCES_FILE} to $@"` "... "
+ORIGs CURRENT:	${ZIPPED_SOURCES_FILE_}
+	@${StroikaRoot}ScriptsLib/PrintProgressLine $$((${MAKE_INDENT_LEVEL}+1)) `${StroikaRoot}ScriptsLib/SubstituteBackVariables "zlib ${ZLIB_VERSION_} - Extracting ${ZIPPED_SOURCES_FILE_} to $@"` "... "
 	@mkdir -p $@
 ifeq ($(DETECTED_HOST_OS),Darwin)
-	@tar xf ${ZIPPED_SOURCES_FILE} -C $@ --strip-components 1
+	@tar xf ${ZIPPED_SOURCES_FILE_} -C $@ --strip-components 1
 else ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
-	@PWD=`pwd` tar xf ${ZIPPED_SOURCES_FILE} --no-same-owner --directory `realpath --relative-to=$$PWD $@` --strip-components=1
+	@PWD=`pwd` tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --directory `realpath --relative-to=$$PWD $@` --strip-components=1
 else
-	@tar xf ${ZIPPED_SOURCES_FILE} --no-same-owner --directory $@ --strip-components=1
+	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --directory $@ --strip-components=1
 endif
 
 
@@ -146,16 +145,16 @@ check-prerequisite-tools:
 
 
 check:
-ifeq ($(CONFIGURATION),)
+ifeq (${CONFIGURATION},)
 	$(error This makefile requires a CONFIGURATION= parameter, or environment variable set)
 endif
-	@${StroikaRoot}ScriptsLib/PrintProgressLine $(MAKE_INDENT_LEVEL) -n "zlib ${VERSION} - Checking ... "
-	@${StroikaRoot}ScriptsLib/CheckFileExists $(PRODUCED_OUTPUT_ARTIFACTS_)
+	@${StroikaRoot}ScriptsLib/PrintProgressLine ${MAKE_INDENT_LEVEL} -n "zlib ${ZLIB_VERSION_} - Checking ... "
+	@${StroikaRoot}ScriptsLib/CheckFileExists ${PRODUCED_OUTPUT_ARTIFACTS_}
 	@${ECHO} " Stroika/ThirdPartyComponents/zlib -    [Succeeded]";
 
 
 clean:
-ifeq ($(CONFIGURATION),)
+ifeq (${CONFIGURATION},)
 	@rm -rf ${StroikaRoot}IntermediateFiles/*/ThirdPartyComponents/zlib
 else
 	@rm -rf $(PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_)
@@ -163,9 +162,9 @@ endif
 
 
 clobber:	clean
-ifeq ($(CONFIGURATION),)
+ifeq (${CONFIGURATION},)
 	@rm -rf ${StroikaRoot}Builds/*/ThirdPartyComponents/lib/libz${LIB_SUFFIX} ${StroikaRoot}Builds/*/ThirdPartyComponents/include/{zlib,zconf}.h
 	@rm -rf CURRENT
 else
-	@rm -rf $(PRODUCED_OUTPUT_ARTIFACTS_)
+	@rm -rf ${PRODUCED_OUTPUT_ARTIFACTS_}
 endif
