--- a/DockerBuildContainers/Windows-MSYS/Dockerfile
+++ b/DockerBuildContainers/Windows-MSYS/Dockerfile
@@ -19,50 +19,73 @@ ARG BASE_IMAGE=mcr.microsoft.com/windows/servercore:ltsc2022
 
 FROM ${BASE_IMAGE}
 
-# install choco
-SHELL ["powershell"]
-ENV CHOCO_URL=https://chocolatey.org/install.ps1
-RUN Set-ExecutionPolicy Bypass -Scope Process -Force; \
- [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]'Tls,Tls11,Tls12'; \
- iex ((New-Object System.Net.WebClient).DownloadString("$env:CHOCO_URL"));
+#
+# NOTE - can install via choco or via MSYS installer directly.
+# Default to MSYS installer directly cuz
+#   - smaller that way (no choco)
+#   - more flexible picking versions of msys to install
+# but not significant difference
+#
+#   Just comment out <CHOCO_BASED_INSTALLER> or <MYS_INSTALLER> sections according to taste.
+#   WISH DOCKERFILES HAD AN IF!!! OMG...
+#
 
 
-## install MSYS2
 #### https://stroika.atlassian.net/browse/STK-766
 #### NOTE https://github.com/microsoft/hcsshim/issues/696 - is the source of the del /f /s /q "C:\$Recycle.Bin
 #### Magic - that PREVENTS the MSYS install hang!!!
+
+### INSTALL VIA CHOCO
+
+# ### <CHOCO_BASED_INSTALLER>
+# ARG MSYS_DIR=c:/tools/msys64/
+# ARG MSYS_ASDOS_DIR=c:\tools\msys64
+# # install choco itself
+# SHELL ["powershell"]
+# ENV CHOCO_URL=https://chocolatey.org/install.ps1
+# RUN Set-ExecutionPolicy Bypass -Scope Process -Force; \
+#  [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]'Tls,Tls11,Tls12'; \
+#  iex ((New-Object System.Net.WebClient).DownloadString("$env:CHOCO_URL"));
+# # install via choco
+# SHELL ["cmd", "/S", "/C"]
+# RUN choco install -y msys2 && del /f /s /q "C:\$Recycle.Bin"
+# ### </CHOCO_BASED_INSTALLER>
+
+
+### OR INSTALL VIA MSYS INSTALLER
+#### <MYS_INSTALLER>
+ARG MSYS_DIR=c:/msys64/
+ARG MSYS_ASDOS_DIR=c:\msys64
 ARG MSYS_LatestRelease=https://github.com/msys2/msys2-installer/releases/download/nightly-x86_64/msys2-base-x86_64-latest.sfx.exe
 ARG MSYS_20220118=https://github.com/msys2/msys2-installer/releases/download/2022-01-18/msys2-base-x86_64-20220118.sfx.exe
 ARG MSYS_20220904=https://github.com/msys2/msys2-installer/releases/download/2022-09-04/msys2-base-x86_64-20220904.sfx.exe
 ARG MSYS_20230127=https://github.com/msys2/msys2-installer/releases/download/2023-01-27/msys2-base-x86_64-20230127.sfx.exe
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; \
+  Invoke-WebRequest -UseBasicParsing -uri "$env:MSYS_20230127" -OutFile msys2.exe; \
+  .\msys2.exe -y -oC:\; \
+  Remove-Item msys2.exe ;\
+  function msys() { C:\msys64\usr\bin\bash.exe @('-lc') + @Args; } \
+  msys ' '; \
+  msys 'pacman --noconfirm -Syuu'; \
+  msys 'pacman --noconfirm -Syuu'; \
+  cmd /c del /f /s /q 'C:\$Recycle.Bin'
+#### </MYS_INSTALLER>
 
-SHELL ["cmd", "/S", "/C"]
-RUN choco install -y msys2 && del /f /s /q "C:\$Recycle.Bin"
 
-## ALTERNATIVE MSYS INSTALL, USED TO USE - MAYBE OK as well with DELETE RECYLYE BIG TRICK
-# SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-# RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; \
-#   Invoke-WebRequest -UseBasicParsing -uri "$env:MSYS_20230127" -OutFile msys2.exe; \
-#   .\msys2.exe -y -oC:\; \
-#   Remove-Item msys2.exe ; && del /f /s /q "C:\$Recycle.Bin" \
+## Complete MSYS install, once the basic (core components of) MSYS are installed one way or another
 
-
-# Add msys64 to the path (and mingw64/bin since that is where jq gets installed)
-SHELL ["powershell"]
-RUN  \
-    $env:PATH =  $env:PATH + ';c:\tools\msys64\usr\bin;c:\tools\msys64\mingw64\bin';   \
-    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
+# Setup path to include msys tools (and mingw dir for jq)
+ENV  PATH="%PATH%;${MSYS_DIR}\usr\bin;${MSYS_DIR}\mingw64\bin"
 
 # Install a bunch of components - mostly that Stroika builds will find handy
 SHELL ["cmd", "/S", "/C"]
 RUN \
-    pacman --noconfirm -Syuu && \
-    pacman --noconfirm -Syuu && \
     pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq && \
     pacman --noconfirm -Syuu
 
-COPY Windows-MSYS/Getting-Started-With-Stroika.md c:/tools/msys64/
-COPY Windows-MSYS/.bash_profile c:/tools/msys64/
+COPY Windows-MSYS/Getting-Started-With-Stroika.md $MSYS_DIR
+COPY Windows-MSYS/.bash_profile $MSYS_DIR
 
 # Note, tried using ENTRYPOINT, but this doesn't seem to work reasonably with docker, 
 # and much worse with windows (in part due to available shell commands)
