--- a/.github/workflows/build-N-test-v3-Dev.yml
+++ b/.github/workflows/build-N-test-v3-Dev.yml
@@ -76,15 +76,15 @@ jobs:
             extra_config_args: --apply-default-release-flags --trace2file enable
             includeInDevBranchBuilds: true
 
-          - displayTargetName: ubuntu-20.04-clang++-10
-            os: unix
-            compiler: clang++-10
-            runs_on: ubuntu-latest
-            container_image: sophistsolutionsinc/stroika-buildvm-ubuntu2004-regression-tests:v3
-            cpp_version: c++2a
-            config_name: Release
-            extra_config_args: --apply-default-release-flags --trace2file enable
-            includeInDevBranchBuilds: true
+          # - displayTargetName: ubuntu-20.04-clang++-10
+          #   os: unix
+          #   compiler: clang++-10
+          #   runs_on: ubuntu-latest
+          #   container_image: sophistsolutionsinc/stroika-buildvm-ubuntu2004-regression-tests:v3
+          #   cpp_version: c++2a
+          #   config_name: Release
+          #   extra_config_args: --apply-default-release-flags --trace2file enable
+          #   includeInDevBranchBuilds: true
 
           # ubuntu 22.04
           # - displayTargetName: ubuntu-22.04-g++-11 (Debug)
@@ -127,15 +127,15 @@ jobs:
           #   extra_config_args: --apply-default-release-flags --trace2file enable
           #   includeInDevBranchBuilds: false
 
-          # - displayTargetName: ubuntu-22.04-clang++-14
-          #   os: unix
-          #   compiler: clang++-14
-          #   runs_on: ubuntu-latest
-          #   container_image: sophistsolutionsinc/stroika-buildvm-ubuntu2204-regression-tests:v3
-          #   cpp_version: c++20
-          #   config_name: Release
-          #   extra_config_args: --apply-default-release-flags --trace2file enable
-          #   includeInDevBranchBuilds: false
+          - displayTargetName: ubuntu-22.04-clang++-14
+            os: unix
+            compiler: clang++-14
+            runs_on: ubuntu-latest
+            container_image: sophistsolutionsinc/stroika-buildvm-ubuntu2204-regression-tests:v3
+            cpp_version: c++20
+            config_name: Release
+            extra_config_args: --apply-default-release-flags --trace2file enable
+            includeInDevBranchBuilds: false
 
     ### ATTEMPT TO COMPRESS 2 workflow files into one, but so far not working
     ### SEE
